app/styles/globals.scss
html {
    height: 100%;
	width:100%;
	  -ms-text-size-adjust: 100%; 
  -webkit-text-size-adjust: 100%; 
}
.timeline-title p {
    font-size: 13px;
    margin: 0;
    font-weight: 400;
    color: #444!important;
	background-color:transparent!important;
	padding-bottom:6px
}
.timeline-title p a {
    
    color: #444!important;
	background-color:transparent!important;
	text-decoration:none!important;
	font-weight:500;
	
}
.table-full thead tr > th {font-size:11px;}
.classification-header .btn[disabled],
.tab-content .btn[disabled]
 {
    cursor: not-allowed!important; pointer-events: none!important;}
.sidebar-bg .sidebar-grey{background-color: #ececec;}

.saved.blue{background-color: #00a4e4!important;}
.saved.orange{background-color: #eea633!important;}
.saved.red{background-color: #c13244!important;}
.sca-default .theme-secondary-text, a {
    color: #009cd7;
}
.small-header{    font-size: 11.5px; line-height:13px;}
.view-height-100{height:100vh!important}
.hide-scroll::-webkit-scrollbar { 
    display: none; }
	.modal-body .ta-scroll-window.form-control{min-height:150px!important}
html::-webkit-scrollbar-track,
::-webkit-scrollbar-track
{
	
	border-radius: 10px;
	background-color: #424242;
}

html::-webkit-scrollbar,
::-webkit-scrollbar,
{
	width: 12px;
	background-color: #474747;
}

html::-webkit-scrollbar-thumb,
::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	background-color: #009cd7;
}
.checkbox input[type=checkbox]:after, .checkbox-inline input[type=checkbox]:after, input[type=checkbox]:after {
    content: "";
    display: block;
    width: 15px;
    height: 15px;
    margin-top: -2px;
    margin-right: 5px;
    border: 1px solid #666;
    border-radius: 2px;
    transition: 240ms;
}
td textarea, td input, td select {
    height: 14px !important;}
.validation {
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 5px;
    ping: 5px;
    line-height: 13px;
    font-size: 12px;
}
.breadcrumb{font-family: 'Roboto-Regular', sans-serif; font-size:12px; font-weight:400;}
.red {
    background-color: #c13244;
    color: #fff;
}
.taxonomy-list h4{font-size:12px!important;}
.table-full .btn-round {
    width: 24px;
    height: 24px;
    font-size: 16px;
    line-height: 24px;
}
.identity-services{    ping-left: 5px;
    ping-right: 5px;}
.navbar-nav.navbar-left .small-buttons {
    ping: 0%!important;
    font-size: 25px!important;
    margin-top: 10px;}
.modal-body .tab-content>.active{height:50vh!important;}
.tab-content>.active,

.dashboard-sidebar,
.full-height{height:100vh!important;}

 .Available.badge {
    background-color: #00b0ff;
    font-size: 12px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
  }

  .Claimed.badge {
    background-color: grey;
    font-size: 12px;
    padding: 6px 10px;
    margin: 0px;
    line-height: 13px;
  }
  .sidebar-spacer{height:100vh!important;}
  .dashboard-sidebar{    position: fixed!important;
    top: 64px;
    height: 100%;
	    width: 25%;
}
.alert-warning {
    color: #fff;
    font-weight: 500;
    background-image: none;
    background-repeat: repeat-x;
    border-color: #ffab40;
    line-height: 18px;
	background-color: #ffab40;
}
.alert-info, .alert-success  {
    color: #fff;
    font-weight: 500;
    background-image: none;
    background-repeat: repeat-x;
    border-color: #ffab40;
    line-height: 18px;
	background-color: #2196F3;
}
.alert-danger {
    color: #fff;
    font-weight: 500;
    background-image: none;
    background-repeat: repeat-x;
    border-color: #ffab40;
    line-height: 18px;
	    background-color: #F44336;
}
 

    .validation {
      margin-left: 20px;
      margin-right: 20px;
      margin-top: 5px;
      ping: 5px;
    }
   .md-playlist-[disabled]{    color: #7c7c7c!important;
    background-color: #494949!important;}
/* drag targets */
    .sca-relgroup-drag-hover {

      border: 1px dashed #fff !important;
      background: #00a6e5 !important;
      color: #fff !important;
      visibility: visible;
    }

    .sca-relgroup-drag-target textarea {

      border: 1px dashed #9f9f9f !important;
      background: #dedede !important;
      visibility: visible;
    }
    
/* HR styles */
.top-modal{background: #fff;    position: relative;
    padding: 20px 0px !important}
.top-modal::before,
.top-modal::after {
	position: absolute;
	content: '';
	pointer-events: none;
	
}

/* Triangles */
.add-color {
	background: #f5f5f5;
}

.add-triangles-top, .add-triangles-bottom,{position: relative;
    padding: 20px 0px!important;}
.add-triangles-top::before,
.add-triangles-bottom::after,
.add-triangles-top::after,
.add-triangles-bottom::before {
	left: 50%;
	width: 16px;
	height: 16px;
	-webkit-transform: translateX(-50%) rotate(45deg);
	transform: translateX(-50%) rotate(45deg);
}

.add-triangles-top::before {
	top: -8px;
	background: #fff;
}

.add-triangles-bottom::after {
	bottom: -8px;
	z-index: 10;
	background: inherit;
}


.md-playlist-add.btn-round[disabled] {
    color: #7c7c7c!important;
	cursor: not-allowed !important;
    pointer-events: none !important;
    background-color: #494949!important;
}

